More progress on imports.

--- a/entities/codegen/templates/database/models/class_name.py.j2
+++ b/entities/codegen/templates/database/models/class_name.py.j2
@@ -8,13 +8,24 @@ from sqlalchemy.orm import Mapped, mapped_column, relationship
 
 if TYPE_CHECKING:
     from database.models.files import File
-    {%- for related_field in cls.get_related_fields() %}
+    {%- for related_field in cls.related_fields %}
     from database.models.{{related_field.related_class.snake_name}} import {{related_field.related_class.name}}
+    {%- endfor %}
+    {%- for field in cls.enum_fields %}
+        {%- if loop.first %}
+    from support.enums import 
+        {%- endif %}
+        {{- " " }}
+        {{- field.type}}
+        {{- "," if not loop.last else "" }}
     {%- endfor %}
 else:
     File = "File"
-    {%- for related_field in cls.get_related_fields() %}
+    {%- for related_field in cls.related_fields %}
     {{related_field.related_class.name}} = "{{related_field.related_class.name}}"
+    {%- endfor %}
+    {%- for enum_field in cls.enum_fields %}
+    {{enum_field.type}} = "{{enum_field.type}}"
     {%- endfor %}
 
 
